# ImageProcessingProject

./: CMakeLists.txt  COPYRIGHT.md  INSTALL.md  README.md  tutorials.md
include/: ImageProcessor.h  VideoCapture.h
src/: ImageProcessor.cpp  VideoCapture.cpp  main.cpp
tests/: KalmanFilter.cpp  KalmanFilter.h  SerialPort.cpp  SerialPort.h  TargetTracker.cpp  TargetTracker.h  TensorFlowModel.cpp  TensorFlowModel.h  main.cpp  target_tracker.py
